# succulent-scan

./: README.md  docker-compose.yml
inference-server/: .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
ml-pipeline/: .gitignore  CLAUDE.md  README.md  build_index.py  config.py  create_splits.py  dataset.py  evaluate.py  model.py  pyproject.toml  train.py  utils.py  verify_index.py
utils/check-data-distribution/: README.md  main.py  pyproject.toml
utils/check-image-resolution/: README.md  main.py  pyproject.toml
utils/data-sampling/: README.md  main.py  pyproject.toml
utils/find-small-files/: README.md  run.sh
webapp/: .dockerignore  .env.example  CLAUDE.md  Caddyfile  Dockerfile  boost.json  composer.json  eslint.config.js  package-lock.json  package.json
webapp/app/Http/Controllers/: AnalysisController.php  DescriptionController.php
webapp/app/Http/Middleware/: HandleInertiaRequests.php
webapp/app/Http/Requests/: StoreAnalysisRequest.php
webapp/app/Models/: Analysis.php
webapp/app/Providers/: AppServiceProvider.php
webapp/config/: services.php
webapp/database/migrations/: 2026_02_05_124649_create_analyses_table.php
webapp/resources/css/: app.css
webapp/resources/js/: app.ts  ssr.ts
webapp/resources/js/components/: UploadZone.vue
webapp/resources/js/composables/: useUploadedImage.ts
webapp/resources/js/data/: genera.ts
webapp/resources/js/layouts/: Layout.vue
webapp/resources/js/pages/: Analysis.vue  Description.vue  Home.vue  Result.vue
webapp/resources/views/: app.blade.php
webapp/routes/: web.php
(+4 files in other folders)
